# firebase-js-rs

./: Cargo.toml  README.md
examples/leptos-firebase-auth/: Cargo.toml  index.html
examples/leptos-firebase-auth/src/: main.rs
examples/sycamore-firebase-auth/: Cargo.toml  README.md  index.html
examples/sycamore-firebase-auth/src/: main.rs
examples/sycamore-realtime-database/: Cargo.toml  README.md  index.html
examples/sycamore-realtime-database/src/: main.rs
src/: config.rs  event.rs  lib.rs
src/bindings/: app.rs  auth.rs  database.rs  mod.rs
