[package]
name = "sycamore-realtime-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firebase-js-rs = { path = "../.." }
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev= "ce74cb52f2f46ef285c10101b85a49e6bfbaa3f5", features = [ "suspense" ] }
web-sys = "0.3.61"
